--- a/main.css
+++ b/main.css
@@ -3,5 +3,5 @@ h1{
   font-size: 15px;
   background-color: blue;
   position: relative;
-  box-shadow: 1px 1px 1px 1px black;
+  box-shadow: 1px 1px 1px 1px blackk;
 }
