--- a/main.css
+++ b/main.css
@@ -4,5 +4,5 @@ h1{
   background-color: blue;
   position: relative;
   font-style: italic;
-  box-shadow: 1px 1px 1px 1px black;
+  box-shadow: 1px 1px 1px 1px blackk;
 }
